fix: breadcrumbs wrapping

--- a/src/sass/shared/breadcrumbs.scss
+++ b/src/sass/shared/breadcrumbs.scss
@@ -47,7 +47,6 @@
 
   @include media("<768px") {
     font-size: 0.8rem;
-    flex-wrap: wrap;
   }
 
   @media print {
